// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractCritical returns only css for ids included in page 1`] = `
".no-prefix {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    -webkit-box-pack: center;
    justify-content: center;
  }"
`;

exports[`extractCritical returns static css 1`] = `
Object {
  "css": ".no-prefix {display:-webkit-box; display: -ms-flexbox; display: flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;}.css-71uu79{display:-webkit-box; display: -ms-flexbox; display: flex;}.css-l2qi8{border-radius:50%;height:50px;width:50px;background-color:red;}",
  "html": "<main class=\\"css-13bzyir0 css-71uu79\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"452416722\\"><img size=\\"30\\" class=\\"css-13bzyir1 css-l2qi8\\" data-reactid=\\"2\\"/><img size=\\"100\\" class=\\"css-13bzyir1 css-l2qi8\\" data-reactid=\\"3\\"/><img class=\\"css-13bzyir1 css-l2qi8\\" data-reactid=\\"4\\"/></main>",
  "ids": Array [
    "71uu79",
    "l2qi8",
  ],
  "rules": Array [
    Object {
      "cssText": ".no-prefix {display:-webkit-box; display: -ms-flexbox; display: flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;}",
    },
    Object {
      "cssText": ".css-71uu79{display:-webkit-box; display: -ms-flexbox; display: flex;}",
    },
    Object {
      "cssText": ".css-l2qi8{border-radius:50%;height:50px;width:50px;background-color:red;}",
    },
  ],
}
`;

exports[`extractCritical returns static css 2`] = `
Object {
  "css": ".no-prefix {display:-webkit-box; display: -ms-flexbox; display: flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;}.css-71uu79{display:-webkit-box; display: -ms-flexbox; display: flex;}",
  "html": "<main class=\\"css-13bzyir0 css-71uu79\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"1740055930\\"><div data-reactid=\\"2\\">Hello</div></main>",
  "ids": Array [
    "71uu79",
  ],
  "rules": Array [
    Object {
      "cssText": ".no-prefix {display:-webkit-box; display: -ms-flexbox; display: flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;}",
    },
    Object {
      "cssText": ".css-71uu79{display:-webkit-box; display: -ms-flexbox; display: flex;}",
    },
  ],
}
`;
